Ticket #14811 (closed defect: fixed)

Opened 7 months ago

Last modified 7 months ago

Don't assign NULL to wxUIntPtr

Reported by: KindDragon Owned by:
Priority: normal Milestone:
Component: GUI-all Version: 2.9.4
Keywords: Cc:
Blocked By: Patch: no
Blocking:

Description

In dataview.h ( https://github.com/wxWidgets/wxWidgets/blob/master/include/wx/dataview.h) ofter you assign NULL to integer. This code cannot be compiled if NULL defined as nullptr (use VS2010). Please fix this.

Change History

Changed 7 months ago by PC

  • status changed from new to closed
  • resolution set to fixed

(In [72927]) don't assign NULL to wxUIntPtr, wxUIntPtr is not a pointer, closes #14811

Changed 7 months ago by KindDragon

Thank you!

Note: See TracTickets for help on using tickets.