don't assign NULL to wxUIntPtr, wxUIntPtr is not a pointer, closes #14811

git-svn-id: https://svn.wxwidgets.org/svn/wx/wxWidgets/trunk@72927 c3d73ce0-8a6f-49c7-b76d-6d57e0e08775